# project

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Character.cpp  Character.h  Game.cpp  Game.h  Makefile  Makefile.win  Monster.cpp  Monster.h  P15_Intelligence_System_Project_Fruit_Image_Classification_20201019  Player.h  Point.cpp  Point.h  Project1.dev  Project1.layout  README.md  Slime.h  Todo  Unit.cpp  Unit.h  for_reference.txt  main.cpp  random.cpp  values.h  참고용.txt
core/: 20190413log  AIPrototype.cpp  Armor.h  Board.cpp  Board.h  BoundUnit.h  CMakeLists.txt  Equipment.h  Game.cpp  Game.h  Hand.h  I_Attackable.h  I_Unit.h  Item.h  LeatherArmor.h  MonstFactory.cpp  MonstFactory.h  Monster.cpp  Monster.h  MonsterAI.cpp  MonsterAI.h  MonsterFactory.cpp  MonsterFactory.h  Monsters  MovableUnit.cpp  MovableUnit.h  Player.cpp  Player.h  Shortsword.h  Slime.cpp  Slime.h  Stat.cpp  Stat.h  Status.cpp  Status.h  Terminal.cpp  Terminal.h  Unit.cpp  Unit.h  UserInput.cpp  (+3 more)
include/: Board.h  Equipment.h  Game.h  Hand.h  Item.h  Player.h  Point.h  Shortsword.h  UserInput.h  values.h
legacy/: Unit.h  UnitTest
linux/: CMakeLists.txt  UserInput.cpp  UserInput.h
main/: CMakeLists.txt  main.cpp
resource/: Monsters
src/: Armor.h  Board.cpp  Board.h  Game.cpp  Game.h  Item.h  Monster.h  Player.cpp  Player.h  Point.h  Slime.cpp  Slime.h  Terminal.cpp  Terminal.h  Unit.cpp  Unit.h  UserInput.h  main.cpp
test/: CMakeLists.txt  MonFacTest.cpp  Monsters  UnitTest.cpp  example.cpp
window/: CMakeLists.txt  UserInput.cpp  UserInput.h
